samples/_failures_safe/1761244672_d5f5b2_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_dfbe0ecd.c: In function ‘main’:
./samples/SAFE/__tmp_dfbe0ecd.c:143:5: error: expected declaration or statement at end of input
  143 |     int entries_added = 0;
      |     ^~~
